<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_home_feed_cardView"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_name"
                app:layout_constraintBottom_toBottomOf="@id/author_profile_pic"
                app:layout_constraintEnd_toStartOf="@+id/post_timestamp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/author_profile_pic"
                app:layout_constraintTop_toTopOf="@id/author_profile_pic" />

            <TextView
                android:id="@+id/post_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_timestamp"
                app:layout_constraintBottom_toBottomOf="@id/author_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/author_name"
                app:layout_constraintTop_toTopOf="@id/author_name" />

            <TextView
                android:id="@+id/post_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_vertical"
                android:text="@string/post_title"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/author_profile_pic" />

            <TextView
                android:id="@+id/posted_in_group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/posted_in_group_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/post_title" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/author_profile_pic"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="64dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>